gen/jauanParser.py
# Generated from C:/Users/bibil/Dropbox/PC/Documents/Jauan\jauan.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class jauanParser ( Parser ):

    grammarFileName = "jauan.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "':'", "'end'", "'('", "')'", 
                     "','", "';'", "'return'", "'var'", "'='", "'if'", "'else'", 
                     "'while'", "'scanf'", "'print'", "'break'", "'!'", 
                     "'true'", "'false'", "<INVALID>", "'const'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'*'", "'/'", 
                     "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TRUE", "FALSE", "INT", 
                      "CONST", "FLOAT", "TIPO", "ID_L", "DIGITO", "MUL", 
                      "DIV", "ADD", "SUB", "OPERADOR", "STRING", "ESC", 
                      "WS", "LINE_COMMENT", "COMMENT" ]

    RULE_prog = 0
    RULE_main = 1
    RULE_declar_funcao = 2
    RULE_args_formal = 3
    RULE_bloco = 4
    RULE_comando = 5
    RULE_retorno = 6
    RULE_parametro = 7
    RULE_var = 8
    RULE_declaracao = 9
    RULE_comando_atribuicao = 10
    RULE_op_algebrico = 11
    RULE_ifElse = 12
    RULE_else = 13
    RULE_while = 14
    RULE_scanf = 15
    RULE_print = 16
    RULE_break = 17
    RULE_inst_funcao = 18
    RULE_args_real = 19
    RULE_exprRelacionalBinaria = 20
    RULE_op_relacional = 21
    RULE_exprRelacionalUnaria = 22
    RULE_exprAlgebrica = 23
    RULE_value = 24
    RULE_num = 25
    RULE_id = 26

    ruleNames =  [ "prog", "main", "declar_funcao", "args_formal", "bloco", 
                   "comando", "retorno", "parametro", "var", "declaracao", 
                   "comando_atribuicao", "op_algebrico", "ifElse", "else", 
                   "while", "scanf", "print", "break", "inst_funcao", "args_real", 
                   "exprRelacionalBinaria", "op_relacional", "exprRelacionalUnaria", 
                   "exprAlgebrica", "value", "num", "id" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    TRUE=18
    FALSE=19
    INT=20
    CONST=21
    FLOAT=22
    TIPO=23
    ID_L=24
    DIGITO=25
    MUL=26
    DIV=27
    ADD=28
    SUB=29
    OPERADOR=30
    STRING=31
    ESC=32
    WS=33
    LINE_COMMENT=34
    COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(jauanParser.MainContext,0)


        def declar_funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.Declar_funcaoContext)
            else:
                return self.getTypedRuleContext(jauanParser.Declar_funcaoContext,i)


        def getRuleIndex(self):
            return jauanParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = jauanParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 54
                self.declar_funcao()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloco(self):
            return self.getTypedRuleContext(jauanParser.BlocoContext,0)


        def getRuleIndex(self):
            return jauanParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = jauanParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(jauanParser.T__0)
            self.state = 63
            self.match(jauanParser.T__1)
            self.state = 64
            self.bloco()
            self.state = 65
            self.match(jauanParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declar_funcaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_L(self):
            return self.getToken(jauanParser.ID_L, 0)

        def args_formal(self):
            return self.getTypedRuleContext(jauanParser.Args_formalContext,0)


        def TIPO(self):
            return self.getToken(jauanParser.TIPO, 0)

        def bloco(self):
            return self.getTypedRuleContext(jauanParser.BlocoContext,0)


        def getRuleIndex(self):
            return jauanParser.RULE_declar_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclar_funcao" ):
                listener.enterDeclar_funcao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclar_funcao" ):
                listener.exitDeclar_funcao(self)




    def declar_funcao(self):

        localctx = jauanParser.Declar_funcaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declar_funcao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(jauanParser.ID_L)
            self.state = 68
            self.match(jauanParser.T__3)
            self.state = 69
            self.args_formal()
            self.state = 70
            self.match(jauanParser.T__4)
            self.state = 71
            self.match(jauanParser.T__1)
            self.state = 72
            self.match(jauanParser.TIPO)
            self.state = 73
            self.bloco()
            self.state = 74
            self.match(jauanParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Args_formalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.ParametroContext)
            else:
                return self.getTypedRuleContext(jauanParser.ParametroContext,i)


        def getRuleIndex(self):
            return jauanParser.RULE_args_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs_formal" ):
                listener.enterArgs_formal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs_formal" ):
                listener.exitArgs_formal(self)




    def args_formal(self):

        localctx = jauanParser.Args_formalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_args_formal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 76
                self.parametro()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 77
                    self.match(jauanParser.T__5)
                    self.state = 78
                    self.parametro()
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(jauanParser.VarContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.ComandoContext)
            else:
                return self.getTypedRuleContext(jauanParser.ComandoContext,i)


        def getRuleIndex(self):
            return jauanParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)




    def bloco(self):

        localctx = jauanParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 86
                self.var()


            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 16902400) != 0:
                self.state = 89
                self.comando()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifElse(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.IfElseContext)
            else:
                return self.getTypedRuleContext(jauanParser.IfElseContext,i)


        def while_(self):
            return self.getTypedRuleContext(jauanParser.WhileContext,0)


        def print_(self):
            return self.getTypedRuleContext(jauanParser.PrintContext,0)


        def scanf(self):
            return self.getTypedRuleContext(jauanParser.ScanfContext,0)


        def comando_atribuicao(self):
            return self.getTypedRuleContext(jauanParser.Comando_atribuicaoContext,0)


        def inst_funcao(self):
            return self.getTypedRuleContext(jauanParser.Inst_funcaoContext,0)


        def break_(self):
            return self.getTypedRuleContext(jauanParser.BreakContext,0)


        def retorno(self):
            return self.getTypedRuleContext(jauanParser.RetornoContext,0)


        def getRuleIndex(self):
            return jauanParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = jauanParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comando)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 95
                        self.ifElse()

                    else:
                        raise NoViableAltException(self)
                    self.state = 98 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.while_()
                pass
            elif token in [8, 14, 15, 16, 24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 101
                    self.print_()
                    pass

                elif la_ == 2:
                    self.state = 102
                    self.scanf()
                    pass

                elif la_ == 3:
                    self.state = 103
                    self.comando_atribuicao()
                    pass

                elif la_ == 4:
                    self.state = 104
                    self.inst_funcao()
                    pass

                elif la_ == 5:
                    self.state = 105
                    self.break_()
                    pass

                elif la_ == 6:
                    self.state = 106
                    self.retorno()
                    pass


                self.state = 109
                self.match(jauanParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetornoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.ValueContext)
            else:
                return self.getTypedRuleContext(jauanParser.ValueContext,i)


        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.IdContext)
            else:
                return self.getTypedRuleContext(jauanParser.IdContext,i)


        def exprAlgebrica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.ExprAlgebricaContext)
            else:
                return self.getTypedRuleContext(jauanParser.ExprAlgebricaContext,i)


        def exprRelacionalBinaria(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.ExprRelacionalBinariaContext)
            else:
                return self.getTypedRuleContext(jauanParser.ExprRelacionalBinariaContext,i)


        def exprRelacionalUnaria(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.ExprRelacionalUnariaContext)
            else:
                return self.getTypedRuleContext(jauanParser.ExprRelacionalUnariaContext,i)


        def getRuleIndex(self):
            return jauanParser.RULE_retorno

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetorno" ):
                listener.enterRetorno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetorno" ):
                listener.exitRetorno(self)




    def retorno(self):

        localctx = jauanParser.RetornoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_retorno)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(jauanParser.T__7)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 2707292176) != 0:
                self.state = 119
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 114
                    self.value()
                    pass

                elif la_ == 2:
                    self.state = 115
                    self.id_()
                    pass

                elif la_ == 3:
                    self.state = 116
                    self.exprAlgebrica()
                    pass

                elif la_ == 4:
                    self.state = 117
                    self.exprRelacionalBinaria()
                    pass

                elif la_ == 5:
                    self.state = 118
                    self.exprRelacionalUnaria()
                    pass


                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(jauanParser.TIPO, 0)

        def ID_L(self):
            return self.getToken(jauanParser.ID_L, 0)

        def getRuleIndex(self):
            return jauanParser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)




    def parametro(self):

        localctx = jauanParser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(jauanParser.TIPO)
            self.state = 125
            self.match(jauanParser.ID_L)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(jauanParser.DeclaracaoContext,i)


        def getRuleIndex(self):
            return jauanParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = jauanParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(jauanParser.T__8)
            self.state = 128
            self.match(jauanParser.T__1)
            self.state = 130 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 129
                    self.declaracao()

                else:
                    raise NoViableAltException(self)
                self.state = 132 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jauanParser.RULE_declaracao

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclaraConstanteContext(DeclaracaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jauanParser.DeclaracaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONST(self):
            return self.getToken(jauanParser.CONST, 0)
        def ID_L(self, i:int=None):
            if i is None:
                return self.getTokens(jauanParser.ID_L)
            else:
                return self.getToken(jauanParser.ID_L, i)
        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.ValueContext)
            else:
                return self.getTypedRuleContext(jauanParser.ValueContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraConstante" ):
                listener.enterDeclaraConstante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraConstante" ):
                listener.exitDeclaraConstante(self)


    class DeclaraVariavelContext(DeclaracaoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jauanParser.DeclaracaoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID_L(self, i:int=None):
            if i is None:
                return self.getTokens(jauanParser.ID_L)
            else:
                return self.getToken(jauanParser.ID_L, i)
        def TIPO(self):
            return self.getToken(jauanParser.TIPO, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraVariavel" ):
                listener.enterDeclaraVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraVariavel" ):
                listener.exitDeclaraVariavel(self)



    def declaracao(self):

        localctx = jauanParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declaracao)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                localctx = jauanParser.DeclaraConstanteContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(jauanParser.CONST)
                self.state = 135
                self.match(jauanParser.ID_L)
                self.state = 136
                self.match(jauanParser.T__9)
                self.state = 137
                self.value()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 138
                    self.match(jauanParser.T__5)
                    self.state = 139
                    self.match(jauanParser.ID_L)
                    self.state = 140
                    self.match(jauanParser.T__9)
                    self.state = 141
                    self.value()
                    self.state = 146
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 147
                self.match(jauanParser.T__6)
                pass
            elif token in [24]:
                localctx = jauanParser.DeclaraVariavelContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(jauanParser.ID_L)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 150
                    self.match(jauanParser.T__5)
                    self.state = 151
                    self.match(jauanParser.ID_L)
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 157
                self.match(jauanParser.T__1)
                self.state = 158
                self.match(jauanParser.TIPO)
                self.state = 159
                self.match(jauanParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comando_atribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.IdContext)
            else:
                return self.getTypedRuleContext(jauanParser.IdContext,i)


        def value(self):
            return self.getTypedRuleContext(jauanParser.ValueContext,0)


        def exprRelacionalBinaria(self):
            return self.getTypedRuleContext(jauanParser.ExprRelacionalBinariaContext,0)


        def op_algebrico(self):
            return self.getTypedRuleContext(jauanParser.Op_algebricoContext,0)


        def getRuleIndex(self):
            return jauanParser.RULE_comando_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando_atribuicao" ):
                listener.enterComando_atribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando_atribuicao" ):
                listener.exitComando_atribuicao(self)




    def comando_atribuicao(self):

        localctx = jauanParser.Comando_atribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comando_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.id_()
            self.state = 163
            self.match(jauanParser.T__9)
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 164
                self.id_()
                pass

            elif la_ == 2:
                self.state = 165
                self.value()
                pass

            elif la_ == 3:
                self.state = 166
                self.exprRelacionalBinaria()
                pass

            elif la_ == 4:
                self.state = 167
                self.op_algebrico(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Op_algebricoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jauanParser.RULE_op_algebrico

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class UnarioContext(Op_algebricoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jauanParser.Op_algebricoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SUB(self):
            return self.getToken(jauanParser.SUB, 0)
        def op_algebrico(self):
            return self.getTypedRuleContext(jauanParser.Op_algebricoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnario" ):
                listener.enterUnario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnario" ):
                listener.exitUnario(self)


    class ParentesesContext(Op_algebricoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jauanParser.Op_algebricoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def op_algebrico(self):
            return self.getTypedRuleContext(jauanParser.Op_algebricoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenteses" ):
                listener.enterParenteses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenteses" ):
                listener.exitParenteses(self)


    class MultDivContext(Op_algebricoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jauanParser.Op_algebricoContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def op_algebrico(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.Op_algebricoContext)
            else:
                return self.getTypedRuleContext(jauanParser.Op_algebricoContext,i)

        def MUL(self):
            return self.getToken(jauanParser.MUL, 0)
        def DIV(self):
            return self.getToken(jauanParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDiv" ):
                listener.enterMultDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDiv" ):
                listener.exitMultDiv(self)


    class AddSubContext(Op_algebricoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jauanParser.Op_algebricoContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def op_algebrico(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jauanParser.Op_algebricoContext)
            else:
                return self.getTypedRuleContext(jauanParser.Op_algebricoContext,i)

        def ADD(self):
            return self.getToken(jauanParser.ADD, 0)
        def SUB(self):
            return self.getToken(jauanParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class OperandoContext(Op_algebricoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jauanParser.Op_algebricoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_(self):
            return self.getTypedRuleContext(jauanParser.IdContext,0)

        def num(self):
            return self.getTypedRuleContext(jauanParser.NumContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperando" ):
                listener.enterOperando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperando" ):
                listener.exitOperando(self)



    def op_algebrico(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = jauanParser.Op_algebricoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_op_algebrico, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                localctx = jauanParser.UnarioContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

